# aom-rs

./: Cargo.toml  build.rs
src/: lib.rs  utils.rs
src/core/: config.rs  encoder.rs  errors.rs  mod.rs
src/ffi/: aom.rs  errors.rs
