[package]
name = "aom-rs"
version = "0.2.0"
description = "libaom bindings for Rust"
edition = "2021"
author = "Shubham singh	<github: github.com/shubhexists>"
readme = "README.md"

[dependencies]
libc = "0.2"
av-data = "0.4.3"
av-codec = "0.3.0"

[build-dependencies]
bindgen = "0.70.1"
reqwest = { version = "0.12.7", features = ["blocking"] }
flate2 = "1.0.33"
tar = "0.4.42"
shellexpand = "2.1"
walkdir = "2.3.2"